# career-journal-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  setup.cfg
backend/: Makefile  enums.py  main.py  models.py  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 1e1c9442e89d_initial_migration.py  7913dfd29079_initial_db_setup_with_user.py  b101d0fa4705_setup.py  d3ef8004083f_create_initial_tables.py  da48d6fc6d46_update_journalentry_project_id_nullable.py  e9b034e6da40_create_initial_tables.py  f162846e6c36_remove_constriant_on_name.py
backend/core/: admin_portal.py  domain_exceptions.py  exceptions.py
backend/core/admin/: admin_portal.py  auth.py
backend/database/: database.py  db.py  models.py  seed.py  session.py  technology_seed_data.py
backend/domain/auth/: auth_config.py  auth_dependencies.py  auth_router.py  auth_schema.py  auth_service.py
backend/domain/journal_entry/: dependencies.py  journal_entry_dependencies.py  journal_entry_exceptions.py  journal_entry_repo.py  journal_entry_router.py  journal_entry_schema.py  journal_entry_service.py  schema.py
backend/domain/project/: dependencies.py  exceptions.py  project_exceptions.py  project_models.py  project_repo.py  project_router.py  project_schema.py  project_service.py  schema.py
backend/domain/technology/: dependencies.py  exceptions.py  router.py  technology_exceptions.py  technology_models.py  technology_repo.py  technology_router.py  technology_schema.py  technology_service.py
backend/domain/user/: user_dependencies.py  (+5 more)
backend/tests/: conftest.py
(+95 files in other folders)
