[tool.poetry]
name = "job-ai-assistant"
version = "0.1.0"
description = ""
authors = ["ShadFyt <doanryan10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.8"}
sqlmodel = "^0.0.22"
pydantic = "^2.10.6"
alembic = "^1.14.1"
python-dotenv = "^1.0.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

[tool.poetry.dev-dependencies]
uvicorn = "^0.34.0"
black = "^25.1.0"
pre-commit = "^4.1.0"
flake8 = "^7.1.1"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = 'tests/'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
